--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "dev.to",
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOUR-USERNAME/YOUR-REPO.git"
+    "url": "https://github.com/dreamcatcher-tech/dev.to.git"
   },
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "prettier": "prettier",
     "embedme": "embedme blog-posts/**/*.md",
